--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ flask_bootstrap~=3.3.7.1
 flask_login~=0.5.0
 flask_sqlalchemy~=2.5.1
 WTForms~=3.0.1
-email_validator
+email_validator~=1.1.2
 Werkzeug~=2.0.1
 SQLAlchemy~=1.4.31
 bs4~=0.0.1
